# Robotic_LEGO_Assembly_and_Disassembly_from_Human_Demonstration

./: CMakeLists.txt  README.md  license.txt  package.xml
human_demonstration/: learn_from_human_demonstration.py
include/: Lego.hpp  Robot.hpp  UDP_Interface.hpp  UDP_Socket.hpp
include/Utils/: Common.hpp  ErrorHandling.hpp  FileIO.hpp  Math.hpp
launch/: controller_node.launch  task_planning_cartesian_node.launch
simulation/launch/: control.yaml  fanuc_gazebo.launch  fanuc_rviz.launch  lego_setup.launch
simulation/urdf/: common_materials.xacro  fanuc_arm.xacro  lego_1x2.xacro  lego_1x4.xacro  lego_1x6.xacro  lego_1x8.xacro  lego_2x2.xacro  lego_2x4.xacro  lego_2x6.xacro  lego_2x8.xacro  lego_baseplate.xacro  license.txt
src/: Lego.cpp  Robot.cpp  UDP_Interface.cpp
src/Utils/: FileIO.cpp  Math.cpp
src/ros_nodes/: controller_node.cpp  lego_task_planning_cartesian_node.cpp
